src/main/java/com/xy/demo3/LibExpr.g4
grammar LibExpr;
import CommonLexerRules;

prog:stat+;

stat: expr NEWLINE
    | ID '=' expr NEWLINE
    | NEWLINE
    ;

expr: expr ('*'|'/') expr
    | expr ('+'|'-') expr
    | INT
    | ID
    | '(' expr ')'
    ;
